--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compileOnly 'org.projectlombok:lombok:1.18.10'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 }
