--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.10'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
 }
