--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.supportm.test.espresso:espresso-core:3.0.2'
     compileOnly 'org.projectlombok:lombok:1.18.10'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
